--- a/constants.gradle
+++ b/constants.gradle
@@ -12,8 +12,8 @@
 // See the License for the specific language governing permissions and
 // limitations under the License.
 project.ext {
-    releaseVersion = '1.3.1'
-    releaseVersionCode = 1_003_001_3_00
+    releaseVersion = '1.4.0-alpha01'
+    releaseVersionCode = 1_004_000_0_01
     minSdkVersion = 19
     // See https://developer.android.com/training/cars/media/automotive-os#automotive-module
     automotiveMinSdkVersion = 28
